--- a/final_project_template.qmd
+++ b/final_project_template.qmd
@@ -20,7 +20,7 @@ The goal of my project is to analyze disparities in patients with gestational di
 
 Gestational diabetes affects \*\*\* patients annually and is associated with adverse birth outcomes including larger babies and babies experiencing low blood sugar after birth. Women with gestational diabetes are also more at risk for developing Type 2 diabetes in the future. I have worked closely with patient with GDM during the past year and a half as a clinical research coordinator. While working with this patient population, I have noticed the importance of diet in regulating GDM. Many of my patients are immigrants and do not typically eat a normal American diet, so I believe that they do not benefit from nutrition consults as much as patients who are not immigrants. I want to analyze whether race and ethnicity have an impact on the severity of a patient's gestational diabetes.
 
-This problem is interdisciplinary because...
+This problem is interdisciplinary because..
 
 ## Methods {#sec-methods}
 
